# Helios

./: .dockerignore  .env  .env.vault  .gitignore  .helios  A.YAML  README.HELIOS.md  README.md  RUNME.md  ax  compose-dev.yaml  dotenv.dev.keys.json  forward-kafka  helios  helios.hash.json  helios.targets.json  iac-template.code-workspace  ingress-simple-oauth.yaml  pyproject.toml
docker/kafka-cli-util/: build  dockerfile  run  server.properties
iac/: .env.vault  .helios
iac/terraform/: .terraform.lock.hcl  locals.tf  main.tf  namespace.tf  outputs.tf  providers.tf  secrets.tf  storage.tf  variables.tf
infra/: .terraform.lock.hcl  app_oauth.tf  docker_maintenance_site.tf  docker_oauth.tf  helm_release_ngrok.tf  helm_release_postgres.tf  locals.tf  main.tf  namespace.tf  outputs.tf  providers.tf  random_bytes.tf  secrets.tf  storage.tf  variables.tf
infra/docker/: outputs.tf  porta-oauthx.tf  providers.tf
infra/helm/: ngrok_ingress.tf  providers.tf
public/: index.js
scripts/: runner.py
scripts/linux/: bootstrap-cluster  bootstrap-cluster.sh  check-tool-installation  check-tool-installation.sh  dotenv-build-all  dotenv-pull  generate-certs  generate_certs  hash2  helios-health-check  helios-source-hash  helios-source-hash-to-json  install-cert-manager  install-kafka  install-linkerd  lookup-exhelion-hash  ssl-smoke-test  ssl-smoke-test.sh  terraform-apply-env.sh  terraform-burn  terraform-burn.sh  terraform-destroy-env.sh  terraform-init-env.sh  terraform-plan-env.sh  (+1 more)
src/: dockerfile  index.py  models.py  request_validator.py  secret_storage.py
(+241 files in other folders)
