[tool.poetry]
name = "oauth-server"
version = "0.1.0"
description = ""
authors = ["Bill Poulson <poulson.bill@gmail.com>"]
readme = "README.md"
packages = [
  { include = "src", from = "" },
  { include = "src/models.py", from = "" },
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"
pydantic = "^2.7.3"
oauthlib = "^3.2.2"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
gnupg = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
